language fix and spacing. oh what id give to make wowwiki just go away forever and ever and ever and ever and ever.

--- a/css/general.css
+++ b/css/general.css
@@ -238,5 +238,5 @@ blockquote {
 
 a[href*='wowwiki.com']:after {
     color: red;
-    content: "You have linked to WoWWiki which is deprecated. Please link to the correct page Wowpedia.org instead.";
+    content: " You have linked to WoWWiki which is deprecated. Please link to the correct page on Wowpedia.org instead.";
 }
